--- a/aplicacion_autored/app/views/layouts/application.html.erb
+++ b/aplicacion_autored/app/views/layouts/application.html.erb
@@ -10,11 +10,14 @@
 
 <body>
 
+<!-- Install Restive.JS -->
+<script type="text/javascript" src="js/restive.min.js"></script>
+
 <div id="general">
 		<div class="soporte">
 			<div id="header">
 				<div id="mask"></div>
-				<div id="login"></div>
+				<!--<div id="login"></div>-->
 				<%= link_to image_tag("logoautored-ok.jpg", :class => "formato"), "http://www.autored.mx" %>
 				<div id="cuadro_texto_y_boton" align="center">
 					
