Actualize los links a google maps por unos mas exactos. Agreguéun poco de jquery para cambiar los diseños de los bordes al hacer mouse:hover, y otros cambios menores

--- a/aplicacion_autored/app/views/autored1/index.html.erb
+++ b/aplicacion_autored/app/views/autored1/index.html.erb
@@ -33,7 +33,7 @@
 					<% end %> 
 					
 					<% if product.location == @barrancos %>
-						<td align="center"> <a href="https://goo.gl/AL1oMC" > <%=product.location %> </a> </td>
+						<td align="center"> <a href="https://goo.gl/ljp0NB" > <%=product.location %> </a> </td>
 					<% end %> 
 
 					<% if product.location == @sanalona %>
@@ -41,15 +41,15 @@
 					<% end %> 
 
 					<% if product.location == @lombardo %>
-						<td align="center"> <a href="https://goo.gl/Mlg5G8" > <%=product.location %> </a> </td>
+						<td align="center"> <a href="https://goo.gl/zLRm4r" > <%=product.location %> </a> </td>
 					<% end %> 
 
 					<% if product.location == @calzada %>
-						<td align="center"> <a href="https://goo.gl/8Zm9mn" > <%=product.location %> </a> </td>
+						<td align="center"> <a href="https://goo.gl/wzzOej" > <%=product.location %> </a> </td>
 					<% end %> 
 
 					<% if product.location == @navolato %>
-						<td align="center"> <a href="https://goo.gl/gzV3lM" > <%=product.location %> </a> </td>
+						<td align="center"> <a href="https://goo.gl/IWoj3j" > <%=product.location %> </a> </td>
 					<% end %> 
 
 					<td align="center"> <%=product.quantity %> </td>
