--- a/aplicacion_autored/app/views/layouts/application.html.erb
+++ b/aplicacion_autored/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
 <head>
   <title>Catálogo AutoRed</title>
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,900' rel='stylesheet' type='text/css'>
+	<!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
   	<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   	<%= csrf_meta_tags %>
@@ -11,7 +12,7 @@
 <body>
 
 <!-- Install Restive.JS -->
-<script type="text/javascript" src="js/restive.min.js"></script>
+<!-- <script type="text/javascript" src="js/restive.min.js"></script> -->
 
 <div id="general">
 		<div class="soporte">
@@ -38,6 +39,7 @@
 
 							<option> escoja una..
 
+							<% @select_brands.sort! { |a, b| a.downcase <=> b.downcase } %>
 					    	<% @select_brands.each do |x| %> 
 								<option> <%= x %>
 							<% end %>
@@ -54,6 +56,7 @@
 
 					        <option>escoja uno..
 					      
+					        <% @select_models.sort! { |a, b| a.downcase <=> b.downcase } %>
 					      	<% @select_models.each do |x| %> 
 								<option> <%= x %>
 							<% end %>
@@ -69,6 +72,7 @@
 
 				    	<option>escoja uno..
 
+				    	<% @select_years.sort! { |a, b| a.to_i <=> b.to_i } %>
 				    	<% @select_years.each do |x| %> 
 							<option> <%= x %>
 						<% end %>
