--- a/aplicacion_autored/app/assets/stylesheets/style.scss
+++ b/aplicacion_autored/app/assets/stylesheets/style.scss
@@ -268,7 +268,8 @@ div.contenido{
 	margin-bottom: 5px;
 	width: 900px;
 	height: 200px;
-	border: 2px solid rgb(100,100,100);
+	border: 2px solid;
+	border-color:  rgb(100,100,100);
 	border-radius: 10px;
 	#word-break: break-all;
     #word-wrap: break-word;
@@ -292,7 +293,6 @@ div#contenido_info{
 	#float: right;
 	width: 27%;
 	height: 90%;
-	background-color: lightblue;
 }
 
 div#contenido_existencia_ubicacion{
@@ -302,7 +302,6 @@ div#contenido_existencia_ubicacion{
 	#float: right;
 	width: 15.5%;
 	height: 90%;
-	background-color: lightgreen;
 }
 
 img.formato{
