--- a/aplicacion_autored/app/views/layouts/application.html.erb
+++ b/aplicacion_autored/app/views/layouts/application.html.erb
@@ -25,9 +25,11 @@
 					<!--<input class="textbox" type="text" placeholder="Escriba aquí la refacción a buscar..">--> 
 					
 						<%= form_for(@product_name) do |f| %>
-							<%= f.text_field :search_name, class: 'textbox',:placeholder => "Escriba aquí la refacción a buscar.." %>
+							<%= f.text_field :name, class: 'textbox', :placeholder => 'Escriba aquí la refacción a buscar..' %>
 							<a id="myButton">Buscar</a>
 						<% end %>
+
+						
 					
 				</div>
 			</div>
