--- a/aplicacion_autored/app/views/layouts/application.html.erb
+++ b/aplicacion_autored/app/views/layouts/application.html.erb
@@ -11,104 +11,137 @@
 
 <body>
 
-<!-- Install Restive.JS -->
-<!-- <script type="text/javascript" src="js/restive.min.js"></script> -->
+	<!-- Install Restive.JS -->
+	<!-- <script type="text/javascript" src="js/restive.min.js"></script> -->
 
-<div id="general">
-		<div class="soporte">
-			<div id="header">
-				<div id="mask"></div>
-				<!--<div id="login"></div>-->
-				<%= link_to image_tag("logoautored-ok.jpg", :class => "formato"), "http://www.autored.mx" %>
-				<div id="cuadro_texto_y_boton" align="center">
-					
-					<!--<input class="textbox" type="text" placeholder="Escriba aquí la refacción a buscar..">--> 
-					
-						<%= form_for(@product_name) do |f| %>
-							<%= f.text_field :name, class: 'textbox', id: 'product_search_by_name', data: {autocomplete_source: Product.order(:name).map(&:name).uniq}, :placeholder => 'Escriba aquí la refacción a buscar..' %>
-							<a id="myButton">Buscar</a>
-						<% end %>
-
+	<div id="general">
+			<div class="soporte">
+				<div id="header">
+					<div id="mask"></div>
+					<!--<div id="login"></div>-->
+					<%= link_to image_tag("logoautored-ok.jpg", :class => "formato"), "http://www.autored.mx" %>
+					<div id="cuadro_texto_y_boton" align="center">
 						
-					
-				</div>
-			</div>
-		</div>
-		
-		<div id="filtros">
-			<h5 id="titulo_filtro"> Filtros </h5>
-
-			<div id="contenedor_select_marca">
-					<h6 class="etiqueta_filtro"> marca: </h6>
-
-					<div class="styled-select">
-						<select>
-
-							<option> escoja una..
-
-							<% @select_brands.sort! { |a, b| a.downcase <=> b.downcase } %>
-					    	<% @select_brands.each do |x| %> 
-								<option> <%= x %>
+						<!--<input class="textbox" type="text" placeholder="Escriba aquí la refacción a buscar..">--> 
+						
+							<%= form_for(@product_name) do |f| %>
+								<%= f.text_field :name, class: 'textbox', id: 'product_search_by_name', data: {autocomplete_source: Product.order(:name).map(&:name).uniq}, :placeholder => 'Escriba aquí la refacción a buscar..' %>
+								<a id="myButton">Buscar</a>
 							<% end %>
 
-					   </select>
+							
+						
 					</div>
-
+				</div>
 			</div>
+			
+			<div id="filtros">
+				<h5 id="titulo_filtro"> Filtros </h5>
 
-			<div id="contenedor_select_modelo">
-				<h6 class="etiqueta_filtro"> modelo: </h6>
+				<div id="contenedor_select_marca">
+						<h6 class="etiqueta_filtro"> marca: </h6>
+
+						<div class="styled-select">
+							<select>
+
+								<option> escoja una..
+
+								<% @select_brands.sort! { |a, b| a.downcase <=> b.downcase } %>
+						    	<% @select_brands.each do |x| %> 
+									<option> <%= x %>
+								<% end %>
+
+						   </select>
+						</div>
+
+				</div>
+
+				<div id="contenedor_select_modelo">
+					<h6 class="etiqueta_filtro"> modelo: </h6>
+						<div class="styled-select">
+						    <select>
+
+						        <option>escoja uno..
+						      
+						        <% @select_models.sort! { |a, b| a.downcase <=> b.downcase } %>
+						      	<% @select_models.each do |x| %> 
+									<option> <%= x %>
+								<% end %>
+
+						    </select>
+						</div>
+				</div>
+
+				<div id="contenedor_select_anho">
+					<h6 class="etiqueta_filtro"> año: </h6>
 					<div class="styled-select">
 					    <select>
 
-					        <option>escoja uno..
-					      
-					        <% @select_models.sort! { |a, b| a.downcase <=> b.downcase } %>
-					      	<% @select_models.each do |x| %> 
+					    	<option>escoja uno..
+
+					    	<% @select_years.sort! { |a, b| a.to_i <=> b.to_i } %>
+					    	<% @select_years.each do |x| %> 
 								<option> <%= x %>
 							<% end %>
 
 					    </select>
 					</div>
-			</div>
-
-			<div id="contenedor_select_anho">
-				<h6 class="etiqueta_filtro"> año: </h6>
-				<div class="styled-select">
-				    <select>
-
-				    	<option>escoja uno..
-
-				    	<% @select_years.sort! { |a, b| a.to_i <=> b.to_i } %>
-				    	<% @select_years.each do |x| %> 
-							<option> <%= x %>
-						<% end %>
-
-				    </select>
 				</div>
-			</div>
 
-			<div id="contenedor_silder_precio">
-				<div>
-					<h6 class="etiquetas_filtro_precio_izq"> precio min.</h6>
-					<h6 class="etiquetas_filtro_precio_der"> precio max.</h6>
+				<div id="contenedor_silder_precio">
+					<div>
+						<h6 class="etiquetas_filtro_precio_izq"> precio min.</h6>
+						<h6 class="etiquetas_filtro_precio_der"> precio max.</h6>
+						
+						<h6 class="var_precio_min"> $<%=@precio_min%> </h6>
+						<input type="text" id="valueSlider" class="var_precio_max" />
+					</div>
 					
-					<h6 class="var_precio_min"> $<%=@precio_min%> </h6>
-					<input type="text" id="valueSlider" class="var_precio_max" />
+					<div class="slider">
+						<div class="emptyprogress"></div>
+						<div class="progress"></div>
+						<div class="indicator"></div>
+					</div>
 				</div>
-				
-				<div class="slider">
-					<div class="emptyprogress"></div>
-					<div class="progress"></div>
-					<div class="indicator"></div>
-				</div>
+		
 			</div>
-	
+
+	</div>
+
+	<%= yield %>
+
+	<div id="footer">	
+		<div id="footer_imagenes">
+
+			<div id="container_rss">
+				<a href="https://www.google.com" target="_blank"><div id="rss"></div></a>
+			</div>
+			
+			<div id="container_facebook">	
+				<a href="https://www.facebook.com/autored.refaccionarias/" target="_blank"> <div id="facebook"></div> </a>
+			</div>
+
+			<div id="container_youtube">
+				<a href="https://www.youtube.com/channel/UCHK6tX1gQa-qVrYSyBMturA" target="_blank"><div id="youtube"></div></a>
+			</div>
+
+			<div id="phone"></div>
+
+			<div id="container_mail">
+				<a href="http://www.autored.mx/index.php?option=com_content&view=article&id=5&Itemid=6" target="_blank"><div id="mail"></div></a>
+			</div>
+
+			<div id="container_page">
+				<a href="http://www.autored.mx/" target="_blank"> <div id="page"></div> </a>
+			</div>
 		</div>
 
-</div>
-
-<%= yield %>
+		<div id="footer_info">
+			<label class="footer_text" align="center"> AutoRed Refaccionarias S.A. de C.V. </label> <br>
+			<label class="footer_text" align="center"> Juan José Ríos #932 Pte. </label> <br>
+			<label class="footer_text" align="center"> Col. Jorge Almada </label>
+		</div>
+	</div>
 
 </body>
 </html>
