--- a/aplicacion_autored/app/views/layouts/application.html.erb
+++ b/aplicacion_autored/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
 						<h6 class="etiqueta_filtro"> marca: </h6>
 
 						<div class="styled-select">
-							<select>
+							<select id="select_marca">
 
 								<option> escoja una..
 
