--- a/aplicacion_autored/app/views/autored1/index.html.erb
+++ b/aplicacion_autored/app/views/autored1/index.html.erb
@@ -2,7 +2,7 @@
 
 <div id="loading", class="hidden"></div>
 
-<% @products.each do |product| %> 
+<% @products2.each do |product| %> 
 
 	<div class="contenido"> 
 
