Conexion a la base de datos en servidor autored (MySQLServer)

--- a/app_AutoRed_Rails-Angular/app/views/layouts/application.html.erb
+++ b/app_AutoRed_Rails-Angular/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Catálogo en línea</title>
+    <title>AutoRed Catálogo</title>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,900' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -19,12 +19,11 @@
     <ui-view></ui-view>
 
     <script type="text/ng-template" id="/home.html">
-
+    
         <div id="general">
 
             <div class="soporte">
                 <div id="header">
-                    
                   <div id="contenedor_logo"> <a href="https://www.autored.mx" target="_blank"> <div class="logo"></div> </a> </div>
                 </div>
             </div>
