Hize los modelos productos y lineas productos con fines de prueba. Se logró mostrar la info de un controlador en la vista de angular, falta implementar poder lograr esto con varios controladores..

--- a/app_AutoRed_Rails-Angular/app/assets/stylesheets/style.scss
+++ b/app_AutoRed_Rails-Angular/app/assets/stylesheets/style.scss
@@ -77,7 +77,7 @@ div#filtros{
 	margin-left: 5%;
 	margin-top: -80px;
 	#background-color: rgb(0,93,255);
-	background-image: -webkit-linear-gradient(top, rgb(0,93,255), rgb(0,93,255) 20%, transparent 20%, transparent 100%);
+	background-image: -webkit-linear-gradient(top, rgb(0,93,255), rgb(0,93,255) 20%, white 20%, white 100%);
     word-wrap: break-word;
 
     border: 2px solid #111;
@@ -121,20 +121,20 @@ div#contenedor_select_marca{
 div#contenedor_select_modelo{
 	width: 100%;
 	margin-top: 10px;
-	background-color: transparent;
+	background-color: whitewhite;
 }
 
 div#contenedor_select_anho{
 	width: 100%;
 	margin-top: 10px;
-	background-color: transparent;
+	background-color: whitewhite;
 }
 
 div#contenedor_botones{
 	border-top: 3px solid #EEE;
 	width: 100%;
 	margin-top: 15px;
-	background-color: transparent;
+	background-color: whitewhite;
 }
 
 div#botones {
